# ModuleExample

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/hello_std/: CMakeLists.txt  main.cpp
example/module_partitions/: CMakeLists.txt  math.cpp  math.cppm  math_base.cpp  math_fun.cppm  math_vec.cppm
example/multiple_export/: CMakeLists.txt  main.cpp  math.cpp  math.cppm
example/separate_imp/: CMakeLists.txt  math.cpp
example/simple_module/: CMakeLists.txt  main.cpp  math.cppm
example/sub_module/: CMakeLists.txt  main.cpp  math.cppm  math_fun.cpp  math_fun.cppm  math_vec.cpp  math_vec.cppm
example/use_header/: CMakeLists.txt  math.cppm  third_header.h
